# meteofox-spsws

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
.github/matrices/: cmake-flags.json
application/inc/: error_base.h
application/src/: main.c
drivers/components/src/: dps310_hw.c  max11136_hw.c  neom8x_hw.c  sen15901_hw.c  sht3x_hw.c  si1133_hw.c  sx1232_hw.c
drivers/peripherals/inc/: nvm_address.h  stm32l0xx_drivers_flags.h
drivers/utils/src/: terminal_hw.c
middleware/analog/inc/: analog.h
middleware/analog/src/: analog.c
middleware/cli/src/: cli.c
middleware/gps/inc/: gps.h
middleware/gps/src/: gps.c
middleware/power/inc/: power.h
middleware/sigfox/inc/: sigfox_ep_flags.h  sigfox_ep_frames.h
middleware/sigfox/src/: mcu_api.c  rf_api.c  rfe.c
script/: git_version.sh  spsws_hw1-0_debug.launch  spsws_hw1-0_run.launch  spsws_hw2-0_debug.launch  spsws_hw2-0_run.launch
